[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
hyper = { version = "1.5.0", features = ["full"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
rustls = "0.23.16"
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
serde = { version = "1.0.214", features = ["derive"] }
bytes = "1.8.0"
hyper-util = { version = "0.1.10", features = ["tokio"] }
http-body-util = "0.1.2"
lazy_static = "1.5.0"
once_cell = "1.20.2"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.2.0"
